<resources>
    <string name="app_name">Faccilita Corretor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_second">Faccilita Corretor</string>

    <!-- Navigation Drawer-->
    <string name="drawer_home">Home</string>
    <string name="drawer_corretor">Meu Cadastro</string>
    <string name="drawer_segurados">Segurados</string>
    <string name="drawer_seguradoras">Seguradoras</string>
    <string name="drawer_apolices">Apólices</string>
    <string name="drawer_alertas">Alertas</string>
    <string name="drawer_grafico">Gráficos</string>
    <string name="drawer_ajustes">Ajustes</string>
    <string name="sub_drawer_configuracoes">Configurações</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>

